[gd_scene load_steps=8 format=3 uid="uid://f156fnj31nt0"]

[ext_resource type="Script" uid="uid://deym134chy6kb" path="res://Script/level_selector.gd" id="1_22lal"]
[ext_resource type="Texture2D" uid="uid://buycd6cn8vue8" path="res://Assets/shrinkingFileSet.png" id="2_x3xpc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yk0gq"]
texture = ExtResource("2_x3xpc")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
8:4/0 = 0
9:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
4:5/0 = 0
5:5/0 = 0
8:5/0 = 0
9:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
8:6/0 = 0
9:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
8:7/0 = 0
9:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
10:14/0 = 0
11:14/0 = 0
10:15/0 = 0
11:15/0 = 0

[sub_resource type="TileSet" id="TileSet_b8t80"]
sources/0 = SubResource("TileSetAtlasSource_yk0gq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk0gq"]
bg_color = Color(0.783523, 0.783523, 0.783523, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8t80"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3xpc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="LevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22lal")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1500, 800)
layout_mode = 0
offset_right = 1500.0
offset_bottom = 800.0
color = Color(0.128606, 0.424199, 0.898313, 1)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_b8t80")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(786442, 917504, 6, 851978, 917504, 7, 786443, 983040, 6, 851979, 983040, 7, 524298, 917504, 6, 589834, 917504, 7, 524299, 983040, 6, 589835, 983040, 7, 655370, 917504, 6, 720906, 917504, 7, 655371, 983040, 6, 720907, 983040, 7, 524300, 917504, 6, 589836, 917504, 7, 524301, 983040, 6, 589837, 983040, 7, 655372, 917504, 6, 720908, 917504, 7, 655373, 983040, 6, 720909, 983040, 7, 786444, 917504, 6, 851980, 917504, 7, 786445, 983040, 6, 851981, 983040, 7, 524302, 917504, 6, 589838, 917504, 7, 524303, 983040, 6, 589839, 983040, 7, 655374, 917504, 6, 720910, 917504, 7, 655375, 983040, 6, 720911, 983040, 7, 786446, 917504, 6, 851982, 917504, 7, 786447, 983040, 6, 851983, 983040, 7, 524304, 917504, 6, 589840, 917504, 7, 524305, 983040, 6, 589841, 983040, 7, 655376, 917504, 6, 720912, 917504, 7, 655377, 983040, 6, 720913, 983040, 7, 786448, 917504, 6, 851984, 917504, 7, 786449, 983040, 6, 851985, 983040, 7, 524306, 917504, 6, 589842, 917504, 7, 524307, 983040, 6, 589843, 983040, 7, 655378, 917504, 6, 720914, 917504, 7, 655379, 983040, 6, 720915, 983040, 7, 786450, 917504, 6, 851986, 917504, 7, 786451, 983040, 6, 851987, 983040, 7, 524308, 917504, 6, 589844, 917504, 7, 524309, 983040, 6, 589845, 983040, 7, 655380, 917504, 6, 720916, 917504, 7, 655381, 983040, 6, 720917, 983040, 7, 786452, 917504, 6, 851988, 917504, 7, 786453, 983040, 6, 851989, 983040, 7, 524310, 917504, 6, 589846, 917504, 7, 524311, 983040, 6, 589847, 983040, 7, 655382, 917504, 6, 720918, 917504, 7, 655383, 983040, 6, 720919, 983040, 7, 786454, 917504, 6, 851990, 917504, 7, 786455, 983040, 6, 851991, 983040, 7, 524312, 917504, 6, 589848, 917504, 7, 524313, 983040, 6, 589849, 983040, 7, 655384, 917504, 6, 720920, 917504, 7, 655385, 983040, 6, 720921, 983040, 7, 786456, 917504, 6, 851992, 917504, 7, 786457, 983040, 6, 851993, 983040, 7, 524314, 917504, 6, 589850, 917504, 7, 655386, 917504, 6, 720922, 917504, 7, 786458, 917504, 6, 851994, 917504, 7, 524297, 917504, 6, 589833, 917504, 7, 655369, 917504, 6, 720905, 917504, 7, 786441, 917504, 6, 851977, 917504, 7, -65514, 917504, 6, 393225, 917504, 4, 458761, 917504, 5, 393226, 983040, 4, 458762, 983040, 5, 393227, 917504, 4, 458763, 917504, 5, 393228, 983040, 4, 458764, 983040, 5, 393229, 917504, 4, 458765, 917504, 5, 393230, 983040, 4, 458766, 983040, 5, 393231, 917504, 4, 458767, 917504, 5, 393232, 983040, 4, 458768, 983040, 5, 393233, 917504, 4, 458769, 917504, 5, 393234, 983040, 4, 458770, 983040, 5, 393235, 917504, 4, 458771, 917504, 5, 393236, 983040, 4, 458772, 983040, 5, 393237, 917504, 4, 458773, 917504, 5, 393238, 983040, 4, 458774, 983040, 5, 393239, 917504, 4, 458775, 917504, 5, 393240, 983040, 4, 458776, 983040, 5, 393241, 917504, 4, 458777, 917504, 5, 393242, 983040, 4, 458778, 983040, 5, 524296, 851968, 6, 589832, 851968, 7, 655368, 851968, 6, 720904, 851968, 7, 786440, 851968, 6, 851976, 851968, 7, 458760, 851968, 5, 524315, 851968, 268435462, 589851, 851968, 268435463, 655387, 851968, 268435462, 720923, 851968, 268435463, 786459, 851968, 268435462, 851995, 851968, 268435463, 458779, 851968, 268435461, 917512, 131072, 2, 983048, 262144, 1073741827, 917513, 196608, 2, 983049, 196608, 3, 917514, 131072, 2, 983050, 131072, 3, 917515, 196608, 2, 983051, 196608, 3, 917516, 131072, 2, 983052, 131072, 3, 917517, 196608, 2, 983053, 196608, 3, 917518, 131072, 2, 983054, 131072, 3, 917519, 196608, 2, 983055, 196608, 3, 917520, 131072, 2, 983056, 131072, 3, 917521, 196608, 2, 983057, 196608, 3, 917522, 131072, 2, 983058, 131072, 3, 917523, 196608, 2, 983059, 196608, 3, 917524, 131072, 2, 983060, 131072, 3, 917525, 196608, 2, 983061, 196608, 3, 917526, 131072, 2, 983062, 131072, 3, 917527, 196608, 2, 983063, 196608, 3, 917528, 131072, 2, 983064, 131072, 3, 917529, 196608, 2, 983065, 196608, 3, 917530, 131072, 2, 983066, 131072, 3, 917531, 196608, 2, 983067, 262144, 1342177283, 917532, 131072, 2, 983068, 262144, 1342177282, 917511, 131072, 2, 983047, 262144, 1073741826, 1048584, 327680, 1073741827, 1048585, 0, 5, 1048586, 65536, 5, 1048587, 0, 5, 1048588, 65536, 5, 1048589, 0, 5, 1048590, 65536, 5, 1048591, 0, 5, 1048592, 65536, 5, 1048593, 0, 5, 1048594, 65536, 5, 1048595, 0, 5, 1048596, 65536, 5, 1048597, 0, 5, 1048598, 65536, 5, 1048599, 0, 5, 1048600, 65536, 5, 1048601, 0, 5, 1048602, 65536, 5, 1048603, 327680, 1342177283)
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array(786441, 655360, 14, 851977, 655360, 15, 786442, 720896, 14, 851978, 720896, 15, 786455, 786432, 12, 851991, 786432, 13, 786456, 851968, 12, 851992, 851968, 13, 786443, 655360, 14, 851979, 655360, 15, 786444, 720896, 14, 851980, 720896, 15, 851993, 917504, 9, 851994, 983040, 9, 786448, 524288, 12, 851984, 524288, 13, 786449, 589824, 12, 851985, 589824, 13)

[node name="Return" type="Button" parent="."]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
offset_left = 52.0
offset_top = 545.0
offset_right = 145.0
offset_bottom = 584.0
scale = Vector2(0.89863, 0.90671)
theme_override_font_sizes/font_size = 30
text = "Return"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -52.0
offset_right = 258.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Level1" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 1"

[node name="Level2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 2
"

[node name="Level3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 3"

[node name="Level4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 4"

[node name="Level5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 5"

[node name="Level6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 6"

[node name="Level7" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 7"

[node name="Level8" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 8"

[node name="Level9" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 9"

[node name="Level10" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_yk0gq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8t80")
theme_override_styles/normal = SubResource("StyleBoxFlat_x3xpc")
text = "Level 10
"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="GridContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="GridContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="GridContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="GridContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="GridContainer/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="GridContainer/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="GridContainer/Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="GridContainer/Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="GridContainer/Level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="GridContainer/Level10" to="." method="_on_level_10_pressed"]
